--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 			<canvas id="main-canvas" width="500" height="500"></canvas>
 		</div>
 
-	<script src="game.js" type="text/javascript"></script>
+	<script src="js/pattern_defs.js" type="text/javascript"></script>
+	<script src="js/rng_rules.js" type="text/javascript"></script>
+	<script src="js/building.js" type="text/javascript"></script>
+	<script src="js/building_tier.js" type="text/javascript"></script>
+	<script src="js/tier_partition.js" type="text/javascript"></script>
+	<script src="js/game.js" type="text/javascript"></script>
 
 	</body>
 </html>
