--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<body>
 
 		<div id="main">
-			<canvas id="main-canvas" width="500" height="500"></canvas>
+			<canvas id="main-canvas" width="2400" height="500"></canvas>
+			<canvas id="temp-canvas" width="2400" height="500"></canvas>
 		</div>
 
 	<script src="js/pattern_defs.js" type="text/javascript"></script>
